--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -166,7 +166,13 @@
 <li>If connection is wrong, click on "Reset Connection" button and follow steps 1, 2, 3, and 4 again.</li>
 <li>If connection is successful, click on Switch available on the screen with black color and hold the switch for a few seconds. </li>
 <li>While holding the switch, Output LED is on. Observe the square wave graph to see how the output changes until you complete the observation.</li>
-<li>Click on the "REFRESH" button to re-execute the experiment.</li>
+<li>Click on "NEXT LEVEL" button go to next stage.</li>
+</ol>
+
+<center id="modelTitle"><b>Questions</b></center>
+<ol>
+<li>Read all the questions carefully and submit the answer</li>
+<li>After submission, "Result" page will displayed</li>
 </ol>
       </div>
       <div class="modal-footer">
